--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icono.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SinúCode | Mejora Tus Habilidades De Programación</title>
+    <title>Plantify | Crea aplicaciones y plantillas de inventario en Excel</title>
   </head>
   <body>
     <div id="root"></div>
